2005-07-18  Michael Gerdau  <mgdde@users.sourceforge.net>

	* include/wininet.h (WININET_API_FLAG_*): Add defines.

2005-07-18  Daniel Atallah  <datallah@users.sourceforge.net>

	* include/winnt.h (VER_SET_CONDITION): Define.

2005-07-18  Michael Gerdau  <mgdde@users.sourceforge.net>

	* include/wincon.h (AttachConsole): Correct _WIN32_WINNT guard.
	(ATTACH_PARENT_PROCESS): Define.
	(CONSOLE_WINDOWED_MODE): Correct definition to match MSDN
	documentation.

2005-07-17  Benoit Blanchon  <bblanchon@users.sourceforge.net>

	* include/winbase.h (QueueUserWorkItem): Add prototype.

2005-07-13  Benoit Blanchon  <bblanchon@users.sourceforge.net>

	* include/wingdi.h (SHADEBLENDCAPS, SB_NONE, SB_CONST_ALPHA,
	SB_PIXEL_ALPHA, SB_PREMULT_ALPHA, SB_GRAD_RECT, SB_GRAD_TRI,
	COLORMGMTCAPS, CM_NONE, CM_DEVICE_ICM, CM_GAMMA_RAMP,
	CM_CMYK_COLOR): Define.

2005-07-08  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/objsafe.h: New file.

2005-06-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winldap.h (ldap_simple_bindW, ldap_simple_bind_sW,
	ldap_bindW, ldap_bind_sW): Change PCHAR arg to PWCHAR.
	Thanks to: Christian  <chhd at users dot sf dot net>

2005-06-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/richedit.h (GETTEXTEX): Correct name of lpUsedDefChar
	field.
	Thanks to: Saulius Menkevicius  <bobas at users dot sf dot net>

2005-06-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (GlobalDiscard): Define as macro.
	Thanks to: David Golub  <david_golub  at users dot sf dot net>

2005-05-13  Corinna Vinschen  <corinna@vinschen.de>

	* include/winnetwk.h (WNetGetResourceParentA): Add missing declaration.
	(WNetGetResourceParentW): Ditto.
	* include/ddk/ntifs.h (FILE_ID_FULL_DIRECTORY_INFORMATION): Define.
	(FILE_ID_BOTH_DIRECTORY_INFORMATION): Define.

2005-04-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wininet.h (FtpGetFileSize): Add prototype.
	(FtpCommand[AW]): Correct prototypes.