@@ -2396,6 +2396,18 @@ typedef struct tagLVFINDINFOW {
 } LVFINDINFOW, FAR* LPFINDINFOW;
 #define _LV_FINDINFOW tagLVFINDINFOW
 #define LV_FINDINFOW LVFINDINFOW
+typedef struct tagNMLVFINDITEMA {
+	NMHDR hdr;
+	int iStart;
+	LVFINDINFOA lvfi;
+} NMLVFINDITEMA, *PNMLVFINDITEMA, FAR *LPNMLVFINDITEMA;
+#define _NMLVFINDITEMA tagNMLVFINDITEMA
+typedef struct tagNMLVFINDITEMW {
+	NMHDR hdr;
+	int iStart;
+	LVFINDINFOW lvfi;
+} NMLVFINDITEMW, *PNMLVFINDITEMW, FAR *LPNMLVFINDITEMW;
+#define _NMLVFINDITEMW tagNMLVFINDITEMW
 typedef struct _LVHITTESTINFO {
 	POINT pt;
 	UINT flags;
@@ -3335,6 +3347,9 @@ typedef NMHDDISPINFOW NMHDDISPINFO, *LPNMHDDISPINFO;
 #define LV_FINDINFO LV_FINDINFOW
 #define LVFINDINFO LVFINDINFOW
 #define LPFINDINFO LPFINDINFOW
+#define NMLVFINDITEM NMLVFINDITEMW
+#define PNMLVFINDITEM PNMLVFINDITEMW
+#define LPNMLVFINDITEM LPNMLVFINDITEMW
 #define LVM_FINDITEM LVM_FINDITEMW
 #define LVM_GETSTRINGWIDTH LVM_GETSTRINGWIDTHW
 #define LVM_EDITLABEL LVM_EDITLABELW
@@ -3508,6 +3523,9 @@ typedef NMHDDISPINFOW NMHDDISPINFO, *LPNMHDDISPINFO;
 #define LV_FINDINFO LV_FINDINFOA
 #define LVFINDINFO LVFINDINFOA
 #define LPFINDINFO LPFINDINFOA
+#define NMLVFINDITEM NMLVFINDITEMA
+#define PNMLVFINDITEM PNMLVFINDITEMA
+#define LPNMLVFINDITEM LPNMLVFINDITEMA
 #define LVM_FINDITEM LVM_FINDITEMA
 #define LVM_GETSTRINGWIDTH LVM_GETSTRINGWIDTHA
 #define LVM_EDITLABEL LVM_EDITLABELA
